# sblim-testsuite

./: Makefile  README.md  sblim-testsuite.spec
src/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  associator.pm  cimom.pm  configure  configure.ac  consistence.pl  consistence.pm  instance.pm  interface.pl  run.sh  sblim-testsuite.spec  sblim-testsuite.spec.in
src/cim/: SampleClass.cim
src/system/linux/: SampleClass.system  createKeyFiles.sh.sample
